# zkAliPay

./: .gitignore  .gitmodules  .railwayignore  DEPLOYMENT_INFO.txt  DEPLOYMENT_WALKTHROUGH.md  SECRETS.md  START_GUIDE.md  TELEGRAM_SETUP_GUIDE.md  VERCEL_ENV_VARS.txt  deployment.config.json  railway.json
orderbook/: Cargo.toml  Dockerfile  docker-compose.yml  rust-toolchain.toml  start-api.sh  start.sh
orderbook/.cargo/: config.toml
orderbook/.sqlx/: query-29c5f8e2a45475b50747a74a2590368cd8e0b067a0917355730848327565b913.json  query-375da68fb762c86c34bf8479742ce618adb248d509a0b53f193800fdc3b79552.json  query-41c60875cb92f6c45f1e3709ae97d8d0a4ad76a606f50c4cfb9e8426b87d4b0c.json  query-48395b01a3f38a73b74d83fde805880f4df18adef95b83da3e51d06049f2845b.json  query-51f7ba16c9f8e6d94feaa2c688928fefaa0c9eec6b0d0f3c2af6f85470daa580.json  query-5fd341f43dbd1f30b12d073b6e0f3a44057f1dad0dd301cd33ddbf4d41b58c3f.json  query-65dc96e01bddc44fb55087ea7a66f9a73ac957ff57a7af1df50bcab54b7ab119.json  query-7fdba288df2bdf9936ad7f19317bedd3a6561e63ea020f5c507656f4ac1f885e.json  query-812190ca475baecd81fd0030047c1964bb02809a0e01578bbf4821dc0204babc.json  query-868f6a12529f35090dd5cb7ee59e9994dae9d8698ebd67929254a64bc0893c91.json  query-87eb334b35adc82a36e506fbddc70efd39c271ffeabe0930f1b275afaf6e4aa2.json  query-929dd14d2ec36ddb348d9d1628fa8e6bad724295279dfaad118e64fb5ea820aa.json  query-a016796a369dd85f6ac8af466656d0e57f7a2e6b1050f6e163a9edd1ef13177a.json  query-aaab5261fbd91da3a0c1e83d934dc3dc445497825e3c9963499b0e2e42a64aaa.json  query-ac7c650a803f8923b5249e047f1fc67c9dd8f97c20ccb004e1b12421f64c4ab6.json  query-bbe4f01c6fbbf89b476995f2fe77eb5684fcc7dfbeefb5baa3f44cdab5086d43.json  (+2 more)
(+96 files in other folders)
