[package]
name = "zkalipay-orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal handling for prices and amounts
rust_decimal = { version = "1.33", features = ["serde-float"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
async-trait = "0.1"

# Database (PostgreSQL)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal"] }

# Web framework (Axum)
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
hyper = "1.0"

# Blockchain interaction
ethers = { version = "2.0", features = ["abigen", "ws"] }
hex = "0.4"

# Axiom API client
reqwest = { version = "0.11", features = ["json"] }

# PDF validation
sha2 = "0.10"
tempfile = "3.8"
base64 = "0.21"
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }

[dev-dependencies]
# Testing
tokio-test = "0.4"
rand = "0.8"

[[bin]]
name = "api-server"
path = "src/bin/api-server.rs"

# Patch problematic dependency that requires edition2024
[patch.crates-io]
base64ct = { version = "=1.6.0" }
